--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "baffle": "^0.3.6",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
